# kimap

./: .codespellrc.license  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .krazy  .pre-commit-config.yaml  .reviewboardrc  CMakeLists.txt  KF5IMAPConfig.cmake.in  KF5ImapConfig.cmake.in  KPimIMAPConfig.cmake.in  Mainpage.dox  Messages.sh  README.md  REUSE.toml  acl.cpp  acl.h  acljobbase.cpp  acljobbase.h  acljobbase_p.h  appendjob.cpp  appendjob.h  capabilitiesjob.cpp  capabilitiesjob.h  checkjob.cpp  checkjob.h  closejob.cpp  closejob.h  copyjob.cpp  copyjob.h  createjob.cpp  createjob.h  deleteacljob.cpp  deleteacljob.h  deletejob.cpp  deletejob.h  expungejob.cpp  expungejob.h  fetchjob.cpp  (+78 more)
.reuse/: dep5
autotests/: CMakeLists.txt  appendjobtest.cpp  capabilitiesjobtest.cpp  closejobtest.cpp  createjobtest.cpp  deletejobtest.cpp  enablejobtest.cpp  expungejobtest.cpp  fakeservertest.cpp  fetchjobtest.cpp  getmetadatajobtest.cpp  getquotajobtest.cpp  idjobtest.cpp  idlejobtest.cpp  imapsettest.cpp  listjobtest.cpp  loginjobtest.cpp  logoutjobtest.cpp  movejobtest.cpp  namespacejobtest.cpp  quotarootjobtest.cpp  renamejobtest.cpp  searchjobtest.cpp  selectjobtest.cpp  setmetadatajobtest.cpp  setquotajobtest.cpp  statusjobtest.cpp  storejobtest.cpp  streamparsertest.cpp  subscribejobtest.cpp  testimapidle.cpp  testimapserver.cpp  testrfccodecs.cpp  testrfccodecs.h  testsession.cpp  unsubscribejobtest.cpp
autotests/kimaptest/: CMakeLists.txt  fakeserver.cpp  fakeserver.h  mockjob.cpp  mockjob.h  sslserver.cpp  sslserver.h
cmake/: CMakeLists.txt  FindSasl2.cmake
po/ar/: libkimap6.po
po/ast/: libkimap5.po  libkimap6.po
po/bs/: libkimap5.po  libkimap6.po
po/ca/: libkimap5.po  libkimap6.po
po/ca@valencia/: libkimap5.po  libkimap6.po
po/cs/: libkimap5.po  libkimap6.po
po/da/: libkimap6.po
po/de/: libkimap5.po  libkimap6.po
po/el/: libkimap6.po
po/en_GB/: libkimap5.po  libkimap6.po
po/eo/: libkimap5.po  libkimap6.po
po/es/: libkimap6.po
po/et/: libkimap5.po  libkimap6.po
po/eu/: libkimap5.po  libkimap6.po
po/fi/: libkimap5.po  libkimap6.po
po/fr/: libkimap5.po  libkimap6.po
po/ga/: libkimap6.po
po/gl/: libkimap5.po  libkimap6.po
po/he/: libkimap6.po
po/hi/: libkimap6.po
po/hu/: libkimap6.po
po/ia/: libkimap5.po  libkimap6.po
po/it/: libkimap6.po
po/ja/: libkimap5.po  libkimap6.po
po/ka/: libkimap5.po  libkimap6.po
po/kk/: libkimap5.po  libkimap6.po
po/km/: libkimap5.po  libkimap6.po
po/ko/: libkimap5.po  libkimap6.po
po/lt/: libkimap5.po  libkimap6.po
po/lv/: libkimap5.po  libkimap6.po
po/mr/: libkimap6.po
po/nb/: libkimap5.po  libkimap6.po
po/nds/: libkimap5.po  libkimap6.po
po/nl/: libkimap5.po  libkimap6.po
po/nn/: libkimap5.po  libkimap6.po
po/pa/: libkimap6.po
po/pl/: libkimap6.po
po/pt/: libkimap5.po  libkimap6.po
po/pt_BR/: libkimap6.po
po/ro/: libkimap5.po  libkimap6.po
po/ru/: libkimap5.po  libkimap6.po
po/sa/: libkimap6.po
po/sk/: libkimap6.po
po/sl/: libkimap5.po  libkimap6.po
po/sq/: libkimap5.po  libkimap6.po
po/sr/: libkimap5.po  libkimap6.po
po/sr@ijekavian/: libkimap5.po  libkimap6.po
po/sr@ijekavianlatin/: libkimap5.po  libkimap6.po
po/sr@latin/: libkimap5.po  libkimap6.po
po/sv/: libkimap5.po  libkimap6.po
po/ta/: libkimap6.po
po/tr/: libkimap5.po  libkimap6.po
po/ug/: libkimap6.po
po/uk/: libkimap5.po  libkimap6.po
po/zh_CN/: libkimap5.po  libkimap6.po
po/zh_TW/: libkimap5.po  libkimap6.po
src/: CMakeLists.txt  Messages.sh  acl.cpp  acl.h  acljobbase.cpp  acljobbase.h  acljobbase_p.h  appendjob.cpp  appendjob.h  capabilitiesjob.cpp  capabilitiesjob.h  closejob.cpp  closejob.h  common.h  copyjob.cpp  copyjob.h  createjob.cpp  createjob.h  deleteacljob.cpp  deleteacljob.h  deletejob.cpp  deletejob.h  enablejob.cpp  enablejob.h  expungejob.cpp  expungejob.h  fetchjob.cpp  fetchjob.h  getacljob.cpp  getacljob.h  getmetadatajob.cpp  getmetadatajob.h  getquotajob.cpp  getquotajob.h  getquotarootjob.cpp  getquotarootjob.h  global.cpp  idjob.cpp  idjob.h  idlejob.cpp  (+67 more)
tests/: CMakeLists.txt  appendjobtest.cpp  capabilitiesjobtest.cpp  createjobtest.cpp  deletejobtest.cpp  fakeserver.cpp  fakeservertest.cpp  fetchjobtest.cpp  getmetadatajobtest.cpp  idlejobtest.cpp  imapsettest.cpp  listjobtest.cpp  loginjobtest.cpp  logoutjobtest.cpp  quotarootjobtest.cpp  renamejobtest.cpp  searchjobtest.cpp  selectjobtest.cpp  setmetadatajobtest.cpp  storejobtest.cpp  streamparsertest.cpp  subscribejobtest.cpp  testimapidle.cpp  testimapserver.cpp  testkimap.cpp  testrfccodecs.cpp  testrfccodecs.h  testsession.cpp  unsubscribejobtest.cpp
tests/kimaptest/: CMakeLists.txt  fakeserver.cpp  fakeserver.h  mockjob.cpp  mockjob.h  sslserver.h
